--- a/contactus.html
+++ b/contactus.html
@@ -28,7 +28,7 @@
 </head>
 <body>
         <div class="main-cont">
-                <div class="img_bg">
+                <div class="img_bg" style="display:block;">
                     <img src="./images/bg.jpg" style="width:100%;">
                  </div>
             <div class="content_overlay" style="height:60%; background-color:rgba(40,23,56,0.6); ">
