--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
 </head>
 <body>
 	<div class="main-cont">
+		<div class="img_bg">
+					<img src="./images/bg.jpg" style="width:100%; height: 100%;">
+	</div>
 	<div class="video_bg">
 		<video src="bg.mp4" autoplay="" muted="" loop="true">
 			
