--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@ Connect to Grow helps you find the best solution to every services and professio
 
 	<div class="footer bg-color">
 
-		<div class="row">
+		<div class="row" style="margin-right:0px;margin-left:0px;"> 
 			<div class="col-sm-4">
 				<center>
 	              <h4 class="text-color">CONTACT US</h4>
