--- a/contactus.html
+++ b/contactus.html
@@ -57,7 +57,7 @@
                             </li>
                             <li>
                                 <a href="https://swapnil-tiwari.github.io/ctg-portfolio/">
-                                    <i class="far fa-portrait"></i> Portfolio
+                                    <i class="fas fa-portrait"></i> Portfolio
                                 </a>
                             </li>
                             <li class="active_custom">
