--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 							</li>
 							<li>
 								<a href="https://swapnil-tiwari.github.io/ctg-portfolio/">
-										<i class="far fa-portrait"></i> Portfolio
+										<i class="fas fa-portrait"></i> Portfolio
 								</a>
 						</li>
 			        <li>
