--- a/index.html
+++ b/index.html
@@ -588,11 +588,16 @@ Connect to Grow helps you find the best solution to every services and professio
 		<div class="row" style="margin-right:0px;margin-left:0px;"> 
 			<div class="col-sm-4">
 				<center>
-	              <h4 class="text-color">CONTACT US</h4>
+						<h4 class="text-color">CONTACT US</h4>
+						<hr style="background-color: grey; margin-top: 0px;" class="width-50">
+						<p class="para1 align" style="font-size:18px"> 
+						<i class="fa fa-envelope text-color"></i>&nbsp;<strong>Email: </strong>teamcodenova@gmail.com<br><br><br><br></p>
+					  
+	              <!-- <h4 class="text-color">CONTACT US</h4>
 	              <hr style="background-color: grey; margin-top: 0px;" class="width-50">
 	              <p class="para1 align">NIET, Plot No 19, Knowledge Park II, Greater Noida, Uttar Pradesh<br>
 				  <i class="fa fa-phone text-color"></i>&nbsp;<strong>Phone: </strong>+91-8318100759<br>
-				  <i class="fa fa-envelope text-color"></i>&nbsp;<strong>Email: </strong>teamcodenova@gmail.com</p>
+				  <i class="fa fa-envelope text-color"></i>&nbsp;<strong>Email: </strong>teamcodenova@gmail.com</p> -->
             	</center>
 			</div>
 
