--- a/contactus.html
+++ b/contactus.html
@@ -89,8 +89,8 @@
                 <div class="overlay_content" style="margin-top:10vh">
                     <h1 style="font-weight:unset;font-family: 'Thasadith', sans-serif;">Contact Us</h1>
                     <hr>
-                    <h4 style="font-family: 'Thasadith', sans-serif; letter-spacing: 2px;">teamcodenova@gmail.com</h4>
-                    <h4 style="font-family: 'Thasadith', sans-serif; letter-spacing: 2px;">8707647260</h4>
+                    <h4 style="font-family: 'Thasadith', sans-serif; letter-spacing: 2px;" >teamcodenova@gmail.com</h4>
+                    <!-- <h4 style="font-family: 'Thasadith', sans-serif; letter-spacing: 2px;">8707647260</h4> -->
                 </div>
 
 
@@ -149,11 +149,16 @@
                 <div class="row" style="margin-right:0px;margin-left:0px">
                     <div class="col-sm-4">
                         <center>
-                          <h4 class="text-color">CONTACT US</h4>
+                                <h4 class="text-color">CONTACT US</h4>
+                                <hr style="background-color: grey; margin-top: 0px;" class="width-50">
+                                <p class="para1 align" style="font-size:18px"> 
+                                <i class="fa fa-envelope text-color"></i>&nbsp;<strong>Email: </strong>teamcodenova@gmail.com<br><br><br><br></p>
+                              
+                          <!-- <h4 class="text-color">CONTACT US</h4>
                           <hr style="background-color: grey; margin-top: 0px;" class="width-50">
                           <p class="para1 align">NIET, Plot No 19, Knowledge Park II, Greater Noida, Uttar Pradesh<br>
                           <i class="fa fa-phone text-color"></i>&nbsp;<strong>Phone: </strong>+91-8318100759<br>
-                          <i class="fa fa-envelope text-color"></i>&nbsp;<strong>Email: </strong>teamcodenova@gmail.com</p>
+                          <i class="fa fa-envelope text-color"></i>&nbsp;<strong>Email: </strong>teamcodenova@gmail.com</p> -->
                         </center>
                     </div>
         
