--- a/index.html
+++ b/index.html
@@ -310,10 +310,13 @@ Connect to Grow helps you find the best solution to every services and professio
 									<h4>Web Development</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Website Design</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Mobile Application Development</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>IOS Development</h4>
 								</div>
 							</div>
 
@@ -328,22 +331,28 @@ Connect to Grow helps you find the best solution to every services and professio
 			<div class="col-sm-4">
 				<div class="cont">
 					<div class="header" style="background-color: #D5A021">
-						Development <i class="fas fa-laptop"></i>
+						Legal Services <i class="fas fa-laptop"></i>
 					</div>
 					<div class="body">
-						Does your product need a technical developer that develops it according to your need?? We help you find the best service provider to cater your need.
+						Legal services is a troublesome arena for a startup today where every step from registration to a product launch requires legal documentation. We provide you with hassle free legal assistance you require for your startup.
 						<br>
 						<br>
 						<div class="sub-body">
 							<div class="sub-cont">	
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Comapany Registration</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Trademark</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Compliance</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Taxation And Funding</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Legal Agreements</h4>
 								</div>
 							</div>
 
@@ -358,22 +367,25 @@ Connect to Grow helps you find the best solution to every services and professio
 			<div class="col-sm-4">
 				<div class="cont">
 					<div class="header">
-						Development <i class="fas fa-laptop"></i>
+						SEO & Digital Marketting <i class="fas fa-laptop"></i>
 					</div>
 					<div class="body">
-						Does your product need a technical developer that develops it according to your need?? We help you find the best service provider to cater your need.
+						Is the new age digital marketing strategy not your arena and your startup needs a marketing expert? We help you pick the best for you. Select the service provider from our website.
 						<br>
 						<br>
 						<div class="sub-body">
 							<div class="sub-cont">	
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Long Term SEO</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>PPC</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Google Advertising</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Adsense Management</h4>
 								</div>
 							</div>
 
@@ -385,7 +397,114 @@ Connect to Grow helps you find the best solution to every services and professio
 			</div>
 
 
+			<div class="col-sm-4">
+				<div class="cont">
+					<div class="header" style="background-color: #D5A021">
+						Mentorship <i class="fas fa-laptop"></i>
+					</div>
+					<div class="body">
+						Mentoring is an indispensable requirement in a startup's growth. Get mentorship from the famous faces of the startup industry at Connect to Grow.
+						<br>
+						<br>
+						<div class="sub-body">
+							<div class="sub-cont">	
+								<div class="container2 right1">
+									<h4>Guided Entrepreneurship</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Student Entrepreneurs</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Career Guidance</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Bussiness Growth Strategy</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Marketting Strategy Support</h4>
+								</div>
+							</div>
 
+						</div>
+
+						<button>Get Quote!</button>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-sm-4">
+				<div class="cont">
+					<div class="header">
+						Event Management <i class="fas fa-laptop"></i>
+					</div>
+					<div class="body">
+						Organise your events and and be up-to-date with reminders and event management service of Connect to Grow.
+						<br>
+						<br>
+						<div class="sub-body">
+							<div class="sub-cont">	
+								<div class="container2 right1">
+									<h4>Corporate Events</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Award Ceremonies</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Product Launch</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Exhibition And Seminars</h4>
+								</div>
+							</div>
+
+						</div>
+
+						<button>Get Quote!</button>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-sm-4">
+				<div class="cont">
+					<div class="header" style="background-color: #D5A021">
+						Branding & Designing <i class="fas fa-laptop"></i>
+					</div>
+					<div class="body">
+						Facing troubles in designing and branding of your product? Connect to Grow connects you to your required domain of through the our precise search results and verified service providers.
+						<br>
+						<br>
+						<div class="sub-body">
+							<div class="sub-cont">	
+								<div class="container2 right1">
+									<h4>T-shirts</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Wall Clocks</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Blackboard Animations</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Key Chains</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Graphic Design</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Logo Design</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Business Card</h4>
+								</div>
+							</div>
+
+						</div>
+
+						<button>Get Quote!</button>
+					</div>
+				</div>
+			</div>
 
 		</div>
 	</div>
@@ -415,10 +534,13 @@ Connect to Grow helps you find the best solution to every services and professio
 									<h4>Web Development</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Website Design</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Mobile Application Development</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>IOS Development</h4>
 								</div>
 							</div>
 
@@ -433,22 +555,28 @@ Connect to Grow helps you find the best solution to every services and professio
 		    <div class="content">
 		     <div class="cont">
 					<div class="header" style="background-color: #D5A021">
-						Development <i class="fas fa-laptop"></i>
+						Legal Services <i class="fas fa-laptop"></i>
 					</div>
 					<div class="body">
-						Does your product need a technical developer that develops it according to your need?? We help you find the best service provider to cater your need.
+						Legal services is a troublesome arena for a startup today where every step from registration to a product launch requires legal documentation. We provide you with hassle free legal assistance you require for your startup.
 						<br>
 						<br>
 						<div class="sub-body">
 							<div class="sub-cont">	
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Comapany Registration</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Trademark</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Compliance</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Taxation And Funding</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Legal Agreements</h4>
 								</div>
 							</div>
 
@@ -463,22 +591,25 @@ Connect to Grow helps you find the best solution to every services and professio
 		    <div class="content">
 		      <div class="cont">
 					<div class="header">
-						Development <i class="fas fa-laptop"></i>
+						SEO and Digital Marketing <i class="fas fa-laptop"></i>
 					</div>
 					<div class="body">
-						Does your product need a technical developer that develops it according to your need?? We help you find the best service provider to cater your need.
+						Is the new age digital marketing strategy not your arena and your startup needs a marketing expert? We help you pick the best for you. Select the service provider from our website.
 						<br>
 						<br>
 						<div class="sub-body">
 							<div class="sub-cont">	
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Long Term SEO</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>PPC</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Google Advertising</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Adsense Management</h4>
 								</div>
 							</div>
 
@@ -493,22 +624,28 @@ Connect to Grow helps you find the best solution to every services and professio
 		    <div class="content">
 		     <div class="cont">
 					<div class="header" style="background-color: #D5A021">
-						Development <i class="fas fa-laptop"></i>
+						Mentorship <i class="fas fa-laptop"></i>
 					</div>
 					<div class="body">
-						Does your product need a technical developer that develops it according to your need?? We help you find the best service provider to cater your need.
+						Mentoring is an indispensable requirement in a startup's growth. Get mentorship from the famous faces of the startup industry at Connect to Grow.
 						<br>
 						<br>
 						<div class="sub-body">
 							<div class="sub-cont">	
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Guided Entrepreneurship</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Student Entrepreneurs</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Career Guidance</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Bussiness Growth Strategy</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Marketting Strategy Support</h4>
 								</div>
 							</div>
 
@@ -523,22 +660,25 @@ Connect to Grow helps you find the best solution to every services and professio
 		    <div class="content">
 		      <div class="cont">
 					<div class="header">
-						Development <i class="fas fa-laptop"></i>
+						Event Management <i class="fas fa-laptop"></i>
 					</div>
 					<div class="body">
-						Does your product need a technical developer that develops it according to your need?? We help you find the best service provider to cater your need.
+						Organise your events and and be up-to-date with reminders and event management service of Connect to Grow.
 						<br>
 						<br>
 						<div class="sub-body">
 							<div class="sub-cont">	
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Corporate Events</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Award Ceremonies</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Product Launch</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Exhibition And Seminars</h4>
 								</div>
 							</div>
 
@@ -553,22 +693,34 @@ Connect to Grow helps you find the best solution to every services and professio
 		    <div class="content">
 		      <div class="cont">
 					<div class="header" style="background-color: #D5A021">
-						Development <i class="fas fa-laptop"></i>
+						Branding & Designing <i class="fas fa-laptop"></i>
 					</div>
 					<div class="body">
-						Does your product need a technical developer that develops it according to your need?? We help you find the best service provider to cater your need.
+						Facing troubles in designing and branding of your product? Connect to Grow connects you to your required domain of through the our precise search results and verified service providers.
 						<br>
 						<br>
 						<div class="sub-body">
 							<div class="sub-cont">	
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>T-shirts</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Wall Clocks</h4>
 								</div>
 								<div class="container2 right1">
-									<h4>Web Development</h4>
+									<h4>Blackboard Animations</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Key Chains</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Graphic Design</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Logo Design</h4>
+								</div>
+								<div class="container2 right1">
+									<h4>Business Card</h4>
 								</div>
 							</div>
 
