--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 		<div class="overlay_content">
 			<h1>Connect To Grow</h1>
 			<hr>
-			<h3>We Help You Connect and Grow</h3>
+			<h3>We Connect You Grow</h3>
 			<hr>
 		</div>
 
