--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span> 
 			      </button>
-			      <a class="navbar-brand" href="#">CTG</a>
+			      <a class="navbar-brand" href="#"><img src="./images/logo.png" style="width:45px;margin-top:-10px"></a>
 			    </div>
 			    <div class="collapse navbar-collapse" id="myNavbar">
 			    
