--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				        </a>
 				    </li> 
 			        <li>
-			        	<a href="https://teamcodenova.blogspot.com/?m=1">
+			        	<a href="https://connectogrow.blogspot.com/">
 			        		<i class="fas fa-pen-nib"></i> Blog
 			        	</a>
 			        </li> 
