--- a/contactus.html
+++ b/contactus.html
@@ -66,7 +66,7 @@
                                 </a>
                             </li> 
                             <li>
-                                <a href="https://teamcodenova.blogspot.com/?m=1">
+                                <a href="https://connectogrow.blogspot.com/">
                                     <i class="fas fa-pen-nib"></i> Blog
                                 </a>
                             </li> 
@@ -89,7 +89,7 @@
                 <div class="overlay_content" style="margin-top:10vh">
                     <h1 style="font-weight:unset;font-family: 'Thasadith', sans-serif;">Contact Us</h1>
                     <hr>
-                    <h4 style="font-family: 'Thasadith', sans-serif; letter-spacing: 2px;" >teamcodenova@gmail.com</h4>
+                    <h4 style="font-family: 'Thasadith', sans-serif; letter-spacing: 2px;" >connectogrow@gmail.com</h4>
                     <!-- <h4 style="font-family: 'Thasadith', sans-serif; letter-spacing: 2px;">8707647260</h4> -->
                 </div>
 
@@ -152,7 +152,7 @@
                                 <h4 class="text-color">CONTACT US</h4>
                                 <hr style="background-color: grey; margin-top: 0px;" class="width-50">
                                 <p class="para1 align" style="font-size:18px"> 
-                                <i class="fa fa-envelope text-color"></i>&nbsp;<strong>Email: </strong>teamcodenova@gmail.com<br><br><br><br></p>
+                                <i class="fa fa-envelope text-color"></i>&nbsp;<strong>Email: </strong>connectogrow@gmail.com<br><br><br><br></p>
                               
                           <!-- <h4 class="text-color">CONTACT US</h4>
                           <hr style="background-color: grey; margin-top: 0px;" class="width-50">
