--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@ Connect to Grow helps you find the best solution to every services and professio
 						<h4 class="text-color">CONTACT US</h4>
 						<hr style="background-color: grey; margin-top: 0px;" class="width-50">
 						<p class="para1 align" style="font-size:18px"> 
-						<i class="fa fa-envelope text-color"></i>&nbsp;<strong>Email: </strong>teamcodenova@gmail.com<br><br><br><br></p>
+						<i class="fa fa-envelope text-color"></i>&nbsp;<strong>Email: </strong>connectogrow@gmail.com<br><br><br><br></p>
 					  
 	              <!-- <h4 class="text-color">CONTACT US</h4>
 	              <hr style="background-color: grey; margin-top: 0px;" class="width-50">
