--- a/contactus.html
+++ b/contactus.html
@@ -144,7 +144,7 @@
                 </div>
 
             </div>
-            <div class="footer bg-color">
+            <div class="footer bg-color" style="margin-top:0%">
 
                 <div class="row" style="margin-right:0px;margin-left:0px">
                     <div class="col-sm-4">
