--- a/Assests/Pages/development.html
+++ b/Assests/Pages/development.html
@@ -51,7 +51,7 @@
                 </a>
         </li>
         <li>
-            <a href="./contactus.html">
+            <a href="/contactus.html">
                   <i class="far fa-envelope-open"></i> Contact Us
             </a>
         </li>
