--- a/Assests/Pages/brand.html
+++ b/Assests/Pages/brand.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>CTG-services: Branding & Designing</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -91,7 +91,7 @@
 
       </div>
       <div class="get-in-touch">
-        <button class="btn btn-secondary button-touch">Get in touch</button>
+        <button class="btn btn-secondary button-touch" onclick="location.href='../../contactus.html'">Get in touch</button>
       </div>
 
     </div>
