--- a/Assests/Pages/development.html
+++ b/Assests/Pages/development.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>CTG-services: Development</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -100,7 +100,7 @@
           <h4>Web Designing</h4>
           Web designing is salient feature to highlight your online presence that supports your marketing presence, customer service, client building relationship, and almost every other revenue stream. 
           CTG connects you to the best in field web designers that design your website according to your requirements and boost your business. 
-          Mobile Application Development 
+          <h4>Mobile Application Development</h4>
           Today with a giant increase in the time of the audience being spent on the mobile, makes it necessary for a company to build attractive, interactive and user friendly mobile applications. 
           Choose the best mobile developers from our list of developers to maximize your reach to the targeted audience.<br>
           <h4>iOS Development</h4>
@@ -109,7 +109,7 @@
 
       </div>
       <div class="get-in-touch">
-        <button class="btn btn-secondary button-touch">Get in touch</button>
+        <button class="btn btn-secondary button-touch" onclick="location.href='../../contactus.html'">Get in touch</button>
       </div>
 
     </div>
