--- a/contactus.html
+++ b/contactus.html
@@ -220,10 +220,10 @@
 						<ul class="menu-ul">
 
 							<li class="list-item">
-								<i class="fa fa-angle-right ficon"></i><a href="#">ABOUT US</a>
+								<i class="fa fa-angle-right ficon"></i><a href="./index.html">ABOUT US</a>
 							</li>
 							<li class="list-item">
-								<i class="fa fa-angle-right ficon"></i><a href="#">PORTFOLIO</a>
+								<i class="fa fa-angle-right ficon"></i><a href="https://swapnil-tiwari.github.io/ctg-portfolio/">PORTFOLIO</a>
 							</li>
 							<li class="list-item">
 								<i class="fa fa-angle-right ficon"></i><a href="#">PRIVACY POLICY</a>
@@ -232,7 +232,7 @@
 								<i class="fa fa-angle-right ficon"></i><a href="#">TERMS OF USE</a>
 							</li>
 							<li class="list-item">
-								<i class="fa fa-angle-right ficon"></i><a href="#">BLOG</a>
+								<i class="fa fa-angle-right ficon"></i><a href="https://connectogrow.blogspot.com/">BLOG</a>
 							</li>
 							
 						</ul>
