--- a/Assests/Pages/mentor.html
+++ b/Assests/Pages/mentor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>CTG-services: Mentorship</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -71,7 +71,7 @@
       <!--<img class="service-img" src="../../Image/service.jpg"></img> -->
       <div><h1 class="img-caption">Mentorship</h1></div>
       
-      <div><p class="caption-text">Need a technical developer? Let us know.</p></div>
+     <!-- <div><p class="caption-text">Need a technical developer? Let us know.</p></div>-->
     </div>
 
   </div>
@@ -106,7 +106,7 @@
 
       </div>
       <div class="get-in-touch">
-        <button class="btn btn-secondary button-touch">Get in touch</button>
+        <button class="btn btn-secondary button-touch" onclick="location.href='../../contactus.html'">Get in touch</button>
       </div>
 
     </div>
