--- a/contactus.html
+++ b/contactus.html
@@ -51,7 +51,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="/index.html">
                                     <i class="fas fa-briefcase"></i> Services
                                 </a>
                             </li>
@@ -311,7 +311,7 @@
         sub1.innerHTML='Get In Touch';
         if(res.status=="200")
         {
-            alert('You details has been submitted, our executive will contact you as soon as possible');
+            alert('Your details has been submitted, our executive will contact you as soon as possible');
             
         }
         else{
