--- a/contactus.html
+++ b/contactus.html
@@ -71,7 +71,7 @@
                                 </a>
                             </li> 
                         </ul>
-                        <ul class="nav navbar-nav navbar-right">
+                        <!-- <ul class="nav navbar-nav navbar-right">
                             <li>
                                 
                                 <input type="text" name="" class="txt-search" placeholder="Search">
@@ -80,7 +80,7 @@
                                 </button>
                             </li>
                             
-                        </ul>
+                        </ul> -->
                         </div>
                     </div>
                 </nav>
