--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ Connect to Grow helps you find the best solution to every services and professio
 	 End of who we are -->
 
 	<!-- For Mobile-->
-	<div class="services view">
+	<div class="services view" id="allservices">
 		<h1>Our services</h1>
 
 		<div class="row">
