--- a/index.html
+++ b/index.html
@@ -217,8 +217,13 @@
 			        		<i class="fas fa-home"></i> Home
 			        	</a>
 			        </li>
-			        <li>
+			        <li class="view">
 			        	<a href="#allservices" id="liserv">
+			        		<i class="fas fa-briefcase"></i> Services
+			        	</a>
+					</li>
+					<li class="mob-hide">
+			        	<a href="#allservice" id="liserv">
 			        		<i class="fas fa-briefcase"></i> Services
 			        	</a>
 					</li>
@@ -270,8 +275,11 @@
 			<p class="para_about pickup-para">Connect to Grow is a one stop platform for all your needs. It helps you find the best solution to every services and professionals who require precise results and  hassle - free processing.</p> 
 		</div>
 
-		<section class="scrolldown">
+		<section class="scrolldown view">
 			<a href="#allservices" id="scroll"><span></span></a>
+		</section>
+		<section class="scrolldown mob-hide">
+			<a href="#allservice" id="scroll"><span></span></a>
 		</section>
 
 	</div>
@@ -532,7 +540,7 @@ Connect to Grow helps you find the best solution to every services and professio
 
 	<!-- For DeskTopView --> 
 
-		<div class="service-head mob-hide" id="allservices">
+		<div class="service-head mob-hide" id="allservice">
 			<center>
 				<h1 class="main-headers">Our services</h1>
 			</center>
