--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <body>
 	<div class="main-cont">
 		<div class="img_bg">
-					<img src="./images/bg.jpg" style="width:100%; height: 100%;">
+					<img src="./images/bg1.jpg" style="width:100%; height: 100%;object-fit: cover;">
 	</div>
 	<div class="video_bg">
 		<video src="bg.mp4" autoplay="" muted="" loop="true">
@@ -207,7 +207,7 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span> 
 			      </button>
-			      <a class="navbar-brand" href="#"><img src="./images/logo.png" style="width:45px;margin-top:-10px"></a>
+			      <a class="navbar-brand" href="#"><img src="./images/logo1.png" style="width:100px;margin-top:-25px; margin-left: -25px;"></a>
 			    </div>
 			    <div class="collapse navbar-collapse" id="myNavbar">
 			    
